# lazy-tui

./: CMakeLists.txt  CPackDeb.cmake  README.md
.github/workflows/: clang-format.yml  cmake-deb.yml  cmake-multi-platform.yml
src/: main.cpp
src/clicall/: lazycli.cpp  lazycli.hpp
src/tui/: assignment.cpp  course.cpp  course.hpp  mainMenu.cpp  mainMenu.hpp
